--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </svg>
             </div>
             <div class="sidebar__user">
-                <div class="sidebar__name">Александ Коваленко</div>
+                <div class="sidebar__name">Александр Коваленко</div>
                 <div class="sidebar__text">Счастливый студент</div>
             </div>
             <div class="sidebar__tabs">
