--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="Сайт1/index.html">Урок 1</a>
+                        <a href="Lesson_m1/index.html">Урок 1</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="Сайт1/index.html">Урок 2</a>
+                        <a href="Lesson_m1/index.html">Урок 2</a>
                     </li>
                 </ul>
             </div>
