--- a/Lesson_m1/index.html
+++ b/Lesson_m1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="учебная страница">
+    <meta name="description" content="Моя первая страница">
     <meta name="keywords" content="горячие слова для роботов">
     <title>Коваленко Александр</title>
     <link rel="stylesheet" href="style.css">
