--- a/lesson_m2/index.html
+++ b/lesson_m2/index.html
@@ -2,11 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Урок HTML</title>
-    <link rel="shortcut icon" href="html-logo.svg" type="image/x-icon">
+    <title>css lesson 1</title>
+    <link rel="shortcut icon" type="image/x-icon" href="html-logo.svg">
+    <style>
+        div {
+            background: #4b4040;
+            color: white;
+        }
+
+        .block1-2 {
+            background: red;
+            width: 100px;
+            height: 100px;
+        }
+
+        .end_sting{
+            color: #9e68ca;
+        }
+
+        .block2 {
+            background: #6c4988;
+            color: black;
+            width: 300px;
+        }
+
+        .element {
+            background: #3b046e;
+            color: white;
+        }
+    </style>
 </head>
+
 <body>
+    <div>Всем привет, сегодня я создаю свой 
+        <span class="end_sting">первый сайт!</span> 
+        <div class="block1-2">
+        </div>
+    </div>
+
+    <div class="block2">А здесь у меня какие-то элементы:
+        <div class="block2">
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+            <span class="element">Элемент</span>
+        </div>
+    </div>
     
+
 </body>
+
 </html>
