--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,13 +1,147 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Макет сайта</title>
+    <style>
+        header {
+            background-color: #d3b03b;
+            height: 60px;
+        }
+
+        a {
+            color: black;
+        }
+
+
+        .block-2 {
+            background-color: #e7d69f;
+        }
+
+        footer {
+            background-color: #752bb9;
+            color: #ffffff;
+            height: 300px;
+        }
+
+        footer a {
+            color: #ffffff;
+        }
+    </style>
 </head>
+
 <body>
-    <p>
-        ссылка на <a href="https://google.com" target="_blank">гугл (google)</a>
-    </p>
+    <header>
+        <nav>
+            <a href="#sec-1">Первая секция</a>
+            <a href="#sec-2">Вторая секция</a>
+        </nav>
+    </header>
+
+    <main>
+
+        <h1>Заголовок</h1>
+
+        <section id="sec-1">
+            <h2>Та самая первая секция</h2>
+            <img src="https://avatars.mds.yandex.net/i?id=fd094cc70e68371c86db80096008cda5_sr-8218044-images-thumbs&n=13"
+                alt="Изображение монитора с карандашом на экране">
+            <!-- loremru200 -->
+            <p>
+                Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Она, власти злых
+                диких
+                коварных толку залетают даль грамматики? Буквоград живет взгляд осталось. Это, своих свою подпоясал
+                переписывается они эта проектах рукописи страну которое, выйти строчка толку инициал букв заголовок
+                деревни.
+                Дороге, переписали щеке! Свое страна не выйти он о большого заголовок скатился все! Правилами,
+                грамматики на
+                берегу языком живет океана снова продолжил его свое большого свой страна злых по всей выйти предложения
+                назад
+                путь толку однажды послушавшись моей диких? Алфавит меня переписывается океана родного скатился. Меня,
+                безопасную заглавных снова родного заголовок буквенных рот пунктуация даже. Дорогу, семь толку коварных
+                злых
+                обеспечивает реторический рыбного большой о она переписывается! Обеспечивает рекламных домах которое
+                жаренные на
+                берегу своего, пунктуация толку бросил рот собрал о ему страну это, пор, моей если lorem. Рыбными
+                большого
+                эта
+                лучше запятых моей! Безорфографичный агентство проектах до вопрос то. Толку, злых продолжил? Моей лучше
+                приставка залетают грамматики своих! Маленькая на берегу первую буквоград, коварный, пор решила меня
+                толку
+                сих
+                дорогу жаренные агентство рыбными предложения щеке это коварных бросил ведущими взгляд все. Послушавшись
+                правилами всемогущая, океана коварных меня переписали текст рот сбить имени заглавных? Рукописи власти
+                о,
+                коварный щеке ipsum текст вершину приставка, заманивший деревни встретил, она собрал вдали пояс
+                взобравшись
+                послушавшись точках?
+            </p>
+            <ol>
+                <li>Элемент списка</li>
+                <li>Элемент списка</li>
+                <li>Элемент списка</li>
+                <li>Элемент списка</li>
+                <li>Элемент списка</li>
+                <li>Элемент списка</li>
+            </ol>
+        </section>
+
+        <section id="sec-2">
+            <h2>Та самая вторая секция</h2>
+            <p>
+                Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Снова путь
+                всемогущая
+                имеет страна парадигматическая повстречался возвращайся большой речью вопроса курсивных дороге
+                заманивший
+                страну журчит семь океана прямо встретил, залетают подпоясал. Рукописи вдали рот, предупреждал напоивший
+                буквоград текст маленькая гор собрал коварный подпоясал ему, оксмокс заглавных назад живет проектах
+                первую
+                заголовок ведущими семь возвращайся то коварных буквенных одна свою! Рыбного составитель послушавшись
+                диких
+                снова вдали. Языкового предупредила речью, необходимыми мир подпоясал вопроса напоивший раз своего путь,
+                послушавшись большой бросил если курсивных, текстами даже его текстов родного. Правилами вскоре над пор
+                буквоград вдали дороге гор моей, свой языком текстов выйти встретил меня залетают послушавшись даже
+                коварных
+                lorem ipsum необходимыми составитель маленькая одна назад, оксмокс языкового. Своего диких, рекламных
+                текстов лучше жаренные проектах запятой даль злых свой точках необходимыми дорогу деревни, он
+                предупредила
+                даже переписывается ручеек lorem бросил послушавшись журчит пунктуация путь эта там! Рыбного,
+                парадигматическая ipsum? Необходимыми коварных, переписывается жаренные пояс точках курсивных запятых
+                океана
+                раз бросил прямо даль вершину маленький жизни над правилами своего от всех приставка строчка гор взгляд
+                своих толку языком, злых решила! О реторический всемогущая но толку правилами вопрос, океана алфавит
+                рукописи, по всей ему возвращайся свою, текста выйти? Единственное домах, дороге курсивных силуэт имеет
+                рыбными ведущими коварных.
+            </p>
+            <div class="block-2">
+                <blockquote>
+                    <p>
+                        Верстать - это здорово. Признаюсь, я частенько верстаю перед съемками, чтобы снять напряжение.
+                        Жизнь
+                        актера - это, конечно, круто, но если честно, в выходной денек я не могу удержаться от того,
+                        чтобы
+                        уединиться у себя в комнатушке с чашечкой кофе, вс кодом и курсами на <a
+                            href="https://platform.aroken.ru" target="_blank">platform.aroken.ru</a>!
+                    </p>
+                </blockquote>
+                - Джейсон Стэтхем
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h4>Ссылки</h4>
+            <ul>
+                <li> <a href="">Ссылка</a></li>
+                <li> <a href="">Ссылка</a></li>
+                <li> <a href="">Ссылка</a></li>
+                <li> <a href="">Ссылка</a></li>
+                <li> <a href="">Ссылка</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
