--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
                         <a href="lesson_m2/index.html">Урок 2</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson3/index.html">Урок 3</a>
+                        <a href="lesson2_m2/">Урок 14</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson3_m2/">Урок 22</a>
                     </li>
                 </ul>
             </div>
