--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
                     <li class="content__list-item">
                         <a href="lesson3_m2/">Урок 22</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson4_m2/">Селекторы</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson5_m2/">Приоритет селекторов</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
