--- a/lesson2_m2/index.html
+++ b/lesson2_m2/index.html
@@ -150,7 +150,7 @@
         <section></section>
         <section></section>
         <section></section>
-        <section>Истори</section>
+        <section>Истории</section>
         <section>Отзывы</section>
         <section>
             <img src="" alt="">
