--- a/lesson3_m2/index.html
+++ b/lesson3_m2/index.html
@@ -11,9 +11,8 @@
             height: 60px;
         }
 
-        a {
-            color: black;
-        }
+        a:link { color: red; }
+        a:visited { color: white; }
 
         .block-2 {
             background-color: #e7d69f;
