--- a/lesson4_m2/index.html
+++ b/lesson4_m2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,132 @@
 </head>
 
 <body>
+    <!-- Просты селекторы -->
+    <div class="block">Селекторы CSS</div>
+    <div class="block">Селекторы CSS</div>
+    <div class="block">Селекторы CSS</div>
+    <div>Селекторы CSS</div>
+    <div id="id-block">Селекторы CSS</div>
+    <div>Селекторы CSS</div>
+    <div data-example="value1">Селекторы CSS</div>
+    <div data-example="value2">Селекторы CSS</div>
+    <hr>
+
+    <!-- Комбинация селекторов -->
+    <div class="block1">Селекторы CSS</div>
+    <div class="block2">Селекторы CSS</div>
+    <div class="block3">Селекторы CSS</div>
+    <div class="block4">Селекторы CSS</div>
+    <div class="block5">Селекторы CSS</div>
+    <hr>
+
+    <!-- Контекстные селекторы -->
+    <div>Селекторы CSS</div>
+    <div class="blue-block">Селекторы CSS</div>
+    <div>Селекторы CSS</div>
+    <span class="blue-block">Селекторы CSS</span>
+    <hr>
+
+    <div class="orange">Селекторы CSS</div>
     <div>
-        <div class="block block-2" id="block"></div>
+        <div class="orange">Селекторы CSS</div>
     </div>
-</body>
+    <div class="orange">Селекторы CSS</div>
+    <div class="orange">Селекторы CSS</div>
+    <div class="orange">Селекторы CSS</div>
+    <hr>
+
+    <div class="parent">
+        <div class="child">Селекторы CSS</div>
+        <div class="child">Селекторы CSS</div>
+        <div class="child">Селекторы CSS</div>
+        <div class="child">Селекторы CSS</div>
+        <div>
+            <div class="child">Селекторы CSS</div>
+        </div>
+    </div>
+    <hr>
+
+    <div class="parent2">
+        <div class="block1">Селекторы CSS</div>
+        <div class="block2">Селекторы CSS</div>
+        <div class="block3">Селекторы CSS</div>
+        <div class="block4">Селекторы CSS</div>
+        <div class="block5">Селекторы CSS</div>
+    </div>
+    <hr>
+
+    <a href="https:/ya.ru">Селекторы CSS, ссылки</a>
+
+    <ul>Строка текста</ul>
+    <ul>Строка текста</ul>
+    <ul>Строка текста</ul>
+    <p>Строка текста выделенная цветом</p>
+    <ul>Строка текста</ul>
+    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Рыбного ipsum пунктуация
+        инициал, дороге дорогу лучше журчит щеке ему знаках домах маленькая путь реторический оксмокс злых там запятых,
+        снова, скатился они вопрос единственное рыбными все даль силуэт! Свое заголовок последний ipsum ее деревни
+        взобравшись одна букв, прямо послушавшись грустный?</p>
+    <p>Строка текста не выделенная цветом</p>
+    <hr>
+
+    <a href="https://avatars.mds.yandex.net/get-mpic/4591438/img_id5540347351452842025.jpeg/orig"
+        data-info="external image"> Картинка с Яндекса</a>
+    <div id="nogreen">Селекторы CSS</div>
+    <hr>
+
+    <div class="ulist">Простой список элементов
+        <ul>
+            <li>Первый элемент</li>
+            <li>Второй элемент</li>
+            <li>Третий элемент</li>
+            <li>Четвертый элемент</li>
+            <li>Пятый элемент</li>
+        </ul>
+        <ol>
+            <li>Первый элемент</li>
+            <li>Второй элемент</li>
+            <li>Третий элемент</li>
+            <li>Четвертый элемент</li>
+            <li>Пятый элемент</li>
+        </ol>
+        <ul>
+            <li>Первый элемент</li>
+            <li>Второй элемент</li>
+            <li>Третий элемент</li>
+            <li>Четвертый элемент</li>
+            <li>Пятый элемент</li>
+        </ul>
+        <ul>
+            <li>Первый элемент</li>
+            <li>Второй элемент</li>
+            <li>Третий элемент</li>
+            <li>Четвертый элемент</li>
+            <li>Пятый элемент</li>
+        </ul>
+        <ol>
+            <li>Первый элемент</li>
+            <li>Второй элемент</li>
+            <li>Третий элемент</li>
+            <li>Четвертый элемент</li>
+            <li>Пятый элемент</li>
+        </ol>
+    </div>
+
+    <div class="ulist2"> Еще один список
+        <ul class="ulist2">
+            <li>Кнопка №1</li>
+            <li>Кнопка №1</li>
+            <li>Кнопка №1</li>
+            <li>Кнопка №2</li>
+            <li>Кнопка №3</li>
+            <li>Кнопка №4</li>
+        </ul>
+    </div>
+    <hr>
+
+
+
+    by
+
 </html>
