--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                     <li class="content__list-item">
                         <a href="lesson5_m2/">Приоритет селекторов</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson6_m2/">Шрифты и тексты</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
