--- a/lesson5_m2/index.html
+++ b/lesson5_m2/index.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <ul>
-        <li>Первый элемент</li>
-        <li>Второй элемент</li>
-        <li>Третий элемент</li>
-        <li>Четвертый элемент</li>
-        <li>Пятый элемент</li>
-    </ul>
+    <div class="block block-2" id="block"></div>
+    
 </body>
 </html>
