--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <a href="lesson5_m2/">Приоритет селекторов</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson6_m2/">Шрифты и тексты</a>
+                        <a href="lesson6_m2/">ДЗ Шрифты и тексты</a>
                     </li>
                 </ul>
             </div>
