--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                     <li class="content__list-item">
                         <a href="lesson6_m2/">ДЗ Шрифты и тексты</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson7_m2/">Общие свойства CSS</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
