--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <li class="content__list-item">
                         <a href="lesson7_m2/">Общие свойства CSS</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson8_m2/">Lesson 8</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
