--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                     <li class="content__list-item">
                         <a href="lesson8_m2/">Lesson 8</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson9_m2/">Lesson 9</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="maket_m2/">Макет сайта</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
