--- a/maket_my_m2/index.html
+++ b/maket_my_m2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>new maket site</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,82 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header-inner">
+                <img src="img/logo.png" alt="Логотип">
+                <nav class="header-nav">
+                    <ul class="header-list">
+                        <li class="header-item">
+                            <a href="#">Меню</a>
+                        </li>
+                        <li class="header-item">
+                            <a href="#">Меню</a>
+                        </li>
+                        <li class="header-item">
+                            <a href="#">Меню</a>
+                        </li>
+                        <li class="header-item">
+                            <a href="">Меню</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="header-button" href="#">Войти</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <H1 class="hero-title">
+                    Заголовок </H1>
+                <div class="hero-inner">
+                    <div class="hero-text">
+                        <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. <span>Ipsum lorem</span></p>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.</p>
+                    </div>
+                    <div class="hero-buttons">
+                        <a href="#" class="hero-butom-1">Кнопка</a>
+                        <a href="#" class="hero-butom-2">Кнопка<img src="./img/btn.svg" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="cards">
+            <div class="container">
+                <h2 class="cards-title">
+                    Заголовок
+                </h2>
+                <p class="cards-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+                <ul class="cards-flex">
+                    <li class="cards-flex-item">
+                        <h3 class="h3">Заголовок</h3>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </li>
+                    <li class="cards-flex-item">
+                        <h6 class="h3">Заголовок</h6>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </li>
+                    <li class="cards-flex-item">
+                        <h6 class="h6">Заголовок</h6>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </li>
+                    <li class="cards-flex-item">
+                        <h6 class="h6">Заголовок</h6>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer>
 
+    </footer>
 </body>
 
 </html>
