--- a/maket_my_m2/index.html
+++ b/maket_my_m2/index.html
@@ -67,20 +67,28 @@
                 </p>
                 <ul class="cards-flex">
                     <li class="cards-flex-item">
-                        <h3 class="h3">Заголовок</h3>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <div class="cards-flex-inner">
+                            <h3 class="h3">Заголовок</h3>
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </div>
                     </li>
                     <li class="cards-flex-item">
-                        <h6 class="h3">Заголовок</h6>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <div class="cards-flex-inner">
+                            <h3 class="h3">Заголовок</h3>
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </div>
                     </li>
                     <li class="cards-flex-item">
-                        <h6 class="h6">Заголовок</h6>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <div class="cards-flex-inner">
+                            <h3 class="h3">Заголовок</h3>
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </div>
                     </li>
                     <li class="cards-flex-item">
-                        <h6 class="h6">Заголовок</h6>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <div class="cards-flex-inner">
+                            <h3 class="h3">Заголовок</h3>
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </div>
                     </li>
                 </ul>
             </div>
