--- a/maket_m2/index.html
+++ b/maket_m2/index.html
@@ -65,7 +65,8 @@
                 </h2>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore
-                    et dolore magna aliqua. </p>
+                    et dolore magna aliqua. 
+                </p>
                 <ul class="cards-flex">
                     <li class="cards-flex-item">
                         <div class="cards-flex-inner">
