--- a/maket_my_m2/index.html
+++ b/maket_my_m2/index.html
@@ -61,41 +61,101 @@
                 <h2 class="cards-title">
                     Заголовок
                 </h2>
-                <p class="cards-text">
+                <p class="cards-flex-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua.
                 </p>
                 <ul class="cards-flex">
                     <li class="cards-flex-item">
                         <div class="cards-flex-inner">
-                            <h3 class="h3">Заголовок</h3>
-                            <p>Lorem ipsum dolor sit amet</p>
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
                         </div>
                     </li>
                     <li class="cards-flex-item">
                         <div class="cards-flex-inner">
-                            <h3 class="h3">Заголовок</h3>
-                            <p>Lorem ipsum dolor sit amet</p>
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
                         </div>
                     </li>
                     <li class="cards-flex-item">
                         <div class="cards-flex-inner">
-                            <h3 class="h3">Заголовок</h3>
-                            <p>Lorem ipsum dolor sit amet</p>
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
                         </div>
                     </li>
                     <li class="cards-flex-item">
                         <div class="cards-flex-inner">
-                            <h3 class="h3">Заголовок</h3>
-                            <p>Lorem ipsum dolor sit amet</p>
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
+                        </div>
+                    </li>
+                    <li class="cards-flex-item">
+                        <div class="cards-flex-inner">
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
+                        </div>
+                    </li>
+                    <li class="cards-flex-item">
+                        <div class="cards-flex-inner">
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
+                        </div>
+                    </li>
+                    <li class="cards-flex-item">
+                        <div class="cards-flex-inner">
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
+                        </div>
+                    </li>
+                    <li class="cards-flex-item">
+                        <div class="cards-flex-inner">
+                            <h3 class="cards-flex-title">Заголовок</h3>
+                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
                         </div>
                     </li>
                 </ul>
+                <a class="card-flex-buttom" href="#">Кнопка</a>
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-inner">
+                <div class="footer-desc">
+                    <img src="img/logo.png" alt="Логотип">
+                    <p class="footer-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="footer-nav footer-nav-marg">
+                    <h4 class="footer-title">
+                        Столбик
+                    </h4>
+                    <ul>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                    </ul>
+                </div>
+                <div class="footer-nav">
+                    <h4 class="footer-title">
+                        Столбик
+                    </h4>
+                    <ul>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                        <li class="footer-item">Меню</li>
+                    </ul>
+                </div>
 
+            </div>
+        </div>
     </footer>
 </body>
 
