--- a/maket_my_m2/index.html
+++ b/maket_my_m2/index.html
@@ -14,128 +14,21 @@
 
 <body>
     <header class="header">
-
-    </header>
-    <main>
-        <section class="hero">
-            <div class="container">
-                <H1 class="hero-title">
-                    Заголовок </H1>
-                <div class="hero-inner">
-                    <div class="hero-text">
-                        <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. <span>Ipsum lorem</span></p>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat.</p>
-                    </div>
-                    <div class="hero-buttons">
-                        <a href="#" class="hero-butom-1">Кнопка</a>
-                        <a href="#" class="hero-butom-2">Кнопка<img src="./img/btn.svg" alt=""></a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="cards">
-            <div class="container">
-                <h2 class="cards-title">
-                    Заголовок
-                </h2>
-                <p class="cards-flex-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.
-                </p>
-                <ul class="cards-flex">
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                    <li class="cards-flex-item">
-                        <div class="cards-flex-inner">
-                            <h3 class="cards-flex-title">Заголовок</h3>
-                            <p class="cards-flex-text">Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </li>
-                </ul>
-                <a class="card-flex-buttom" href="#">Кнопка</a>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
         <div class="container">
-            <div class="footer-inner">
-                <div class="footer-desc">
-                    <img src="img/logo.png" alt="Логотип">
-                    <p class="footer-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua.
-                    </p>
-                </div>
-                <div class="footer-nav footer-nav-marg">
-                    <h4 class="footer-title">
-                        Столбик
-                    </h4>
-                    <ul>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
+            <div class="header-inner">
+                <img src="img/logo.png" alt="Логотип компании">
+                <div class="header-nav">
+                    <ul class="hedar-list">
+                        <li class="header-item">Меню</li>
+                        <li class="header-item">Меню</li>
+                        <li class="header-item">Меню</li>
+                        <li class="header-item">Меню</li>
                     </ul>
                 </div>
-                <div class="footer-nav">
-                    <h4 class="footer-title">
-                        Столбик
-                    </h4>
-                    <ul>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
-                        <li class="footer-item">Меню</li>
-                    </ul>
-                </div>
-
+                <a class="header-button" href="#">Войти</a>
             </div>
         </div>
-    </footer>
+    </header>
 </body>
 
 </html>
