--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
                     <li class="content__list-item">
                         <a href="maket_my_m2/">Макет сайта мой</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson_table_m2/">Урок Таблицы</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson_form_m2/">Урок Формы</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
