--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <a href="maket_m2/">Макет сайта</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="maket_my_m2/">Макет сайта мой</a>
+                        <a href="maket_bem_m2/">Макет БЭМ</a>
                     </li>
                     <li class="content__list-item">
                         <a href="lesson_table_m2/">Урок Таблицы</a>
