--- a/index.html
+++ b/index.html
@@ -126,14 +126,15 @@
                         <a href="maket_m2/">Макет сайта</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="maket_bem_m2/">Макет БЭМ</a>
-                    </li>
-                    <li class="content__list-item">
                         <a href="lesson_table_m2/">Урок Таблицы</a>
                     </li>
                     <li class="content__list-item">
                         <a href="lesson_form_m2/">Урок Формы</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="maket_bem_m2/">Макет сайта мой</a>
+                    </li>
+                    
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
